Fixed to-do list alignment and clock '0'

--- a/assets/style/main.css
+++ b/assets/style/main.css
@@ -23,11 +23,11 @@ border-radius: 25px;
 }
 
 .big {
-  font-size: 180px;
+  font-size: 100px;
 }
 
-.height {
-  height: 80vh;
+.p-c {
+margin: 15%;
 }
 
 :root {
